--- a/wercker.yml
+++ b/wercker.yml
@@ -32,3 +32,8 @@ build:
     - script:
         name: wintersmith build
         code: ./node_modules/.bin/wintersmith build -o ./build
+    deploy:
+      steps:
+        - vtange/gh-pages:
+            token: $GH_TOKEN
+            basedir: build
