--- a/wercker.yml
+++ b/wercker.yml
@@ -34,6 +34,6 @@ build:
         code: ./node_modules/.bin/wintersmith build -o ./build
 deploy:
   steps:
-    - gh-pages:
+    - lukevivier/gh-pages@0.2.1:
         token: $GH_TOKEN
         basedir: build
