--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "locals": {
-    "url": "http://localhost:8080",
+    "url": "http://vtange.github.io/arch-design/",
     "name": "The Wintersmith's blog",
     "owner": "Someone",
     "description": "Ramblings of an immor(t)al demigod"
