fix unexpected string error on build

--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
     "description": "Ramblings of an immor(t)al demigod"
   },
   "plugins": [
-    "./plugins/paginator.coffee"
+    "./plugins/paginator.coffee",
     "./node_modules/wintersmith-handlebars/wintersmith-handlebars.coffee"
   ],
   "require": {
